--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "d3-dsv": "^3.0.1",
     "d3-time-format": "^4.1.0",
     "mathjs": "^15.1.0",
-    "optimization-js": "^1.5.0"
+    "webr": "^0.5.8"
   },
   "devDependencies": {
     "rimraf": "^5.0.5"
