feat: vcd close loop

--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@tensorflow/tfjs": "^4.22.0",
     "d3-dsv": "^3.0.1",
     "d3-time-format": "^4.1.0",
+    "jstat": "^1.9.6",
+    "kd-tree-javascript": "^1.0.3",
+    "lodash": "^4.17.23",
     "mathjs": "^15.1.0",
     "webr": "^0.5.8"
   },
