--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "kd-tree-javascript": "^1.0.3",
     "lodash": "^4.17.23",
     "mathjs": "^15.1.0",
+    "plotly.js-dist-min": "^3.3.1",
     "webr": "^0.5.8"
   },
   "devDependencies": {
